--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@legendapp/list": "^1.0.7",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-community/slider": "4.5.6",
     "@react-native-picker/picker": "2.11.0",
@@ -30,11 +31,14 @@
     "@roninoss/icons": "^0.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "expo": "^53.0.9",
+    "expo-audio": "~0.4.5",
     "expo-constants": "~17.1.4",
     "expo-dev-client": "~5.1.7",
     "expo-dev-launcher": "^5.0.17",
     "expo-linking": "~7.1.4",
+    "expo-media-library": "^17.1.6",
     "expo-navigation-bar": "~4.2.4",
     "expo-router": "~5.0.3",
     "expo-status-bar": "~2.2.3",
@@ -47,6 +51,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-onboarding-swiper": "^1.3.0",
     "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -59,6 +64,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~19.0.10",
+    "@types/react-native-onboarding-swiper": "^1.1.9",
     "ajv": "^8.12.0",
     "eslint": "^9.25.1",
     "eslint-config-expo": "^9.2.0",
