--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prebuild": "expo prebuild",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^4.1.1",
@@ -37,6 +38,7 @@
     "expo-constants": "~17.1.4",
     "expo-dev-client": "~5.1.7",
     "expo-dev-launcher": "^5.0.17",
+    "expo-document-picker": "^13.1.5",
     "expo-linking": "~7.1.4",
     "expo-media-library": "^17.1.6",
     "expo-navigation-bar": "~4.2.4",
@@ -64,11 +66,13 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.73.0",
     "@types/react-native-onboarding-swiper": "^1.1.9",
     "ajv": "^8.12.0",
     "eslint": "^9.25.1",
     "eslint-config-expo": "^9.2.0",
     "eslint-config-prettier": "^10.1.2",
+    "patch-package": "^8.0.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
