--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@expo-google-fonts/quicksand": "^0.2.2",
     "@expo/react-native-action-sheet": "^4.1.1",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.4",
@@ -36,6 +37,8 @@
     "expo-constants": "~17.1.4",
     "expo-dev-client": "~5.1.7",
     "expo-dev-launcher": "^5.0.17",
+    "expo-font": "^11.3.0",
+    "expo-haptics": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-media-library": "^17.1.6",
     "expo-navigation-bar": "~4.2.4",
