--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "date-fns": "^4.1.0",
     "expo": "^53.0.9",
     "expo-audio": "~0.4.5",
+    "expo-font": "^11.4.0",
+    "@expo-google-fonts/inter": "^0.3.0",
+    "@expo-google-fonts/press-start-2p": "^0.3.0",
     "expo-constants": "~17.1.4",
     "expo-dev-client": "~5.1.7",
     "expo-dev-launcher": "^5.0.17",
@@ -53,6 +56,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-uitextview": "2.0.0-rc.10",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.1"
