--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-store-review": "~8.1.5",
     "expo-system-ui": "~5.0.6",
+    "expo-haptics": "~12.8.1",
     "firebase": "^10.5.2",
     "nativewind": "latest",
     "react": "19.0.0",
