--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prebuild": "expo prebuild",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "test": "node node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^4.1.1",
@@ -75,7 +76,11 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "@types/jest": "^29.5.3",
+    "react-test-renderer": "19.0.0"
   },
   "private": true
 }
