--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "jsx": "react-jsx",
+    "types": ["react-native"],
     "baseUrl": ".",
     "paths": {
       "~/*": ["./*"]
