--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "strict": true,
     "jsx": "react-jsx",
-    "types": ["react-native"],
+    "skipLibCheck": true,
+    "types": [],
     "baseUrl": ".",
     "paths": {
       "~/*": ["./*"]
