fix build errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "jsx": "react-jsx",
-    "types": ["react-native"],
+    "types": ["react-native", "jest"],
     "baseUrl": ".",
     "paths": {
       "~/*": ["./*"]
