--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "@types/jest": "^29.5.3",
-    "react-test-renderer": "19.0.0"
+    "react-test-renderer": "19.0.0",
+    "eas-cli": "^16.12.0"
   },
   "private": true
 }
