fix font imports and stabilize tap sound

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "expo-font": "^11.4.0",
     "@expo-google-fonts/inter": "^0.3.0",
     "@expo-google-fonts/press-start-2p": "^0.3.0",
+    "@expo-google-fonts/vt323": "^0.3.0",
+    "@expo-google-fonts/bungee": "^0.3.0",
+    "@expo-google-fonts/unifrakturcook": "^0.3.0",
     "expo-constants": "~17.1.4",
     "expo-dev-client": "~5.1.7",
     "expo-dev-launcher": "^5.0.17",
