--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "test": "node node_modules/jest/bin/jest.js"
   },
   "dependencies": {
+    "@expo-google-fonts/bungee": "^0.3.0",
+    "@expo-google-fonts/inter": "^0.3.0",
+    "@expo-google-fonts/press-start-2p": "^0.3.0",
+    "@expo-google-fonts/unifrakturcook": "^0.3.0",
+    "@expo-google-fonts/vt323": "^0.3.0",
     "@expo/react-native-action-sheet": "^4.1.1",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.4",
@@ -34,15 +39,12 @@
     "date-fns": "^4.1.0",
     "expo": "^53.0.9",
     "expo-audio": "~0.4.5",
-    "expo-font": "^11.4.0",
-    "@expo-google-fonts/inter": "^0.3.0",
-    "@expo-google-fonts/press-start-2p": "^0.3.0",
-    "@expo-google-fonts/vt323": "^0.3.0",
-    "@expo-google-fonts/bungee": "^0.3.0",
-    "@expo-google-fonts/unifrakturcook": "^0.3.0",
     "expo-constants": "~17.1.4",
     "expo-dev-client": "~5.1.7",
     "expo-dev-launcher": "^5.0.17",
+    "expo-font": "^11.4.0",
+    "expo-haptics": "~12.8.1",
+    "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-media-library": "^17.1.6",
     "expo-navigation-bar": "~4.2.4",
@@ -50,41 +52,40 @@
     "expo-status-bar": "~2.2.3",
     "expo-store-review": "~8.1.5",
     "expo-system-ui": "~5.0.6",
-    "expo-haptics": "~12.8.1",
     "firebase": "^10.5.2",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-confetti-cannon": "^1.5.2",
     "react-native-uitextview": "2.0.0-rc.10",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.3",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.73.0",
     "@types/react-native-onboarding-swiper": "^1.1.9",
     "ajv": "^8.12.0",
+    "eas-cli": "^16.12.0",
     "eslint": "^9.25.1",
     "eslint-config-expo": "^9.2.0",
     "eslint-config-prettier": "^10.1.2",
+    "jest": "^29.7.0",
     "patch-package": "^8.0.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.0",
-    "typescript": "~5.8.3",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "@types/jest": "^29.5.3",
     "react-test-renderer": "19.0.0",
-    "eas-cli": "^16.12.0"
+    "tailwindcss": "^3.4.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
