--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint-config-expo": "^9.2.0",
     "eslint-config-prettier": "^10.1.2",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.2",
     "patch-package": "^8.0.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
