Fix lint issues and optimize photo scanning

--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "scheme": "decluttr",
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "static"
     },
     "plugins": [
       "expo-router",
