feat: integrate Quicksand font

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo-google-fonts/bungee": "^0.3.0",
     "@expo-google-fonts/inter": "^0.3.0",
     "@expo-google-fonts/press-start-2p": "^0.3.0",
+    "@expo-google-fonts/quicksand": "^0.2.3",
     "@expo-google-fonts/unifrakturcook": "^0.3.0",
     "@expo-google-fonts/vt323": "^0.3.0",
     "@expo/react-native-action-sheet": "^4.1.1",
